--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-   "name": "mapbul-pub",
-   "version": "0.1.1",
-   "description": "",
-   "author": "",
+	"name": "mapbul-pub",
+	"version": "0.1.1",
+	"description": "",
+	"author": "",
    "license": "MIT",
    "scripts": {
+      "ls": "lerna ls",
+      "bootstrap": "lerna run bootstrap --hoist",
+      "clean": "lerna run clean",
       "server-build": "node scripts/scripts/buildServer | gnomon",
       "server-deploy": "npm ci && node scripts/scripts/deployServer | gnomon",
       "server-build-old": "rimraf dist/server dist/tsconfig.server-build.tsbuildinfo && copyfiles src/server/.env dist/server -f && copyfiles src/server/views/* dist/server/views -f && copyfiles src/server/api.txt dist/server -f && tsc -p tsconfig.server-build.json --diagnostics | gnomon",
@@ -25,70 +28,73 @@
       "scripts-build": "rimraf scripts && tsc -p tsconfig.scripts-build.json --diagnostics | gnomon",
       "scripts-debug": "cross-env NODE_ENV=development ts-node-dev -r tsconfig-paths/register --inspect=6589 --respawn src/scripts/buildServer.ts | gnomon"
    },
-   "_moduleAliases": {
-      "common": "dist/common/",
-      "server": "dist/server/",
-      "client": "dist/client/",
-      "codegen": "dist/codegen/"
-   },
-   "dependencies": {
-      "@nestjs/common": "^6.0.0",
-      "@nestjs/core": "^6.0.0",
-      "@nestjs/platform-express": "^6.0.0",
-      "@types/app-root-path": "^1.2.4",
-      "app-root-path": "^2.2.1",
-      "dotenv": "^8.1.0",
-      "hbs": "^4.0.4",
-      "module-alias": "^2.2.1",
-      "mysql": "^2.17.1",
-      "reflect-metadata": "^0.1.13",
-      "rimraf": "^2.6.2",
-      "rxjs": "^6.3.3"
-   },
-   "devDependencies": {
-      "@nestjs/testing": "^6.0.0",
-      "@types/express": "4.16.1",
-      "@types/fs-extra": "^8.0.0",
-      "@types/jest": "24.0.11",
-      "@types/mkdirp": "^0.5.2",
-      "@types/mysql": "^2.15.7",
-      "@types/node": "11.13.4",
-      "@types/supertest": "2.0.7",
-      "artillery": "^1.6.0-28",
-      "axios": "^0.19.0",
-      "copyfiles": "^2.1.1",
-      "cross-env": "^5.2.1",
-      "es6-promise-pool": "^2.5.0",
-      "fs-extra": "^8.1.0",
-      "handlebars": "^4.2.0",
-      "jest": "24.7.1",
-      "lerna": "^3.16.4",
-      "mkdirp": "^0.5.1",
-      "prettier": "1.17.0",
-      "react-script": "^2.0.5",
-      "supertest": "4.0.2",
-      "ts-jest": "24.0.2",
-      "ts-morph": "^3.1.3",
-      "ts-node": "8.1.0",
-      "ts-node-dev": "^1.0.0-pre.42",
-      "tsc-watch": "2.2.1",
-      "tsconfig-paths": "3.8.0",
-      "tslint": "5.16.0",
-      "typescript": "^3.4.3",
-      "util": "^0.12.1"
-   },
-   "jest": {
-      "moduleFileExtensions": [
-         "js",
-         "json",
-         "ts"
-      ],
-      "rootDir": "src",
-      "testRegex": ".spec.ts$",
-      "transform": {
-         "^.+\\.(t|j)s$": "ts-jest"
-      },
-      "coverageDirectory": "../coverage",
-      "testEnvironment": "node"
-   }
+	"_moduleAliases": {
+		"common": "dist/common/",
+		"server": "dist/server/",
+		"client": "dist/client/",
+		"codegen": "dist/codegen/"
+	},
+	"dependencies": {
+		"@nestjs/common": "^6.0.0",
+		"@nestjs/core": "^6.0.0",
+		"@nestjs/platform-express": "^6.0.0",
+		"@types/app-root-path": "^1.2.4",
+		"app-root-path": "^2.2.1",
+		"dotenv": "^8.1.0",
+		"hbs": "^4.0.4",
+		"module-alias": "^2.2.1",
+		"mysql": "^2.17.1",
+		"reflect-metadata": "^0.1.13",
+		"rimraf": "^2.6.2",
+		"rxjs": "^6.3.3",
+		"ts-loader": "^6.1.2",
+		"webpack": "^4.41.0",
+		"webpack-cli": "^3.3.9"
+	},
+	"devDependencies": {
+		"@nestjs/testing": "^6.0.0",
+		"@types/express": "4.16.1",
+		"@types/fs-extra": "^8.0.0",
+		"@types/jest": "24.0.11",
+		"@types/mkdirp": "^0.5.2",
+		"@types/mysql": "^2.15.7",
+		"@types/node": "11.13.4",
+		"@types/supertest": "2.0.7",
+		"artillery": "^1.6.0-28",
+		"axios": "^0.19.0",
+		"copyfiles": "^2.1.1",
+		"cross-env": "^5.2.1",
+		"es6-promise-pool": "^2.5.0",
+		"fs-extra": "^8.1.0",
+		"handlebars": "^4.2.0",
+		"jest": "24.7.1",
+		"lerna": "^3.16.4",
+		"mkdirp": "^0.5.1",
+		"prettier": "1.17.0",
+		"react-script": "^2.0.5",
+		"supertest": "4.0.2",
+		"ts-jest": "24.0.2",
+		"ts-morph": "^3.1.3",
+		"ts-node": "8.1.0",
+		"ts-node-dev": "^1.0.0-pre.42",
+		"tsc-watch": "2.2.1",
+		"tsconfig-paths": "3.8.0",
+		"tslint": "5.16.0",
+		"typescript": "^3.4.3",
+		"util": "^0.12.1"
+	},
+	"jest": {
+		"moduleFileExtensions": [
+			"js",
+			"json",
+			"ts"
+		],
+		"rootDir": "src",
+		"testRegex": ".spec.ts$",
+		"transform": {
+			"^.+\\.(t|j)s$": "ts-jest"
+		},
+		"coverageDirectory": "../coverage",
+		"testEnvironment": "node"
+	}
 }
