--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@mapbul-pub/common",
-  "version": "0.1.1",
+  "version": "0.0.0",
   "description": "",
   "author": "",
   "license": "MIT",
   "scripts": {
     "clean": "rimraf lib",
+    "clean:node": "rimraf node_modules",
     "build": "npm run clean && tsc --diagnostics | gnomon",
     "build-webpack": "npm run clean && webpack"
   },
@@ -22,11 +23,10 @@
     "@types/app-root-path": "^1.2.4",
     "app-root-path": "^2.2.1",
     "dotenv": "^8.1.0",
-    "hbs": "^4.0.4",
+    "hbs": "^4.0.5",
     "module-alias": "^2.2.1",
     "mysql": "^2.17.1",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^2.6.2",
     "rxjs": "^6.3.3"
   },
   "devDependencies": {
@@ -50,6 +50,7 @@
     "mkdirp": "^0.5.1",
     "prettier": "1.17.0",
     "react-script": "^2.0.5",
+    "rimraf": "^3.0.0",
     "supertest": "4.0.2",
     "ts-jest": "24.0.2",
     "ts-loader": "^6.1.2",
