--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -5,6 +5,10 @@
    "author": "",
    "license": "MIT",
    "scripts": {
+      "clean": "rimraf lib",
+      "clean:node": "rimraf node_modules",
+      "build": "npm run clean && tsc --diagnostics | gnomon",
+      "build-webpack": "npm run clean && webpack"
    },
    "_moduleAliases": {
       "common": "dist/common/",
@@ -13,6 +17,7 @@
       "codegen": "dist/codegen/"
    },
    "dependencies": {
+      "@mapbul-pub/common": "^0.0.0",
       "@nestjs/common": "^6.0.0",
       "@nestjs/core": "^6.0.0",
       "@nestjs/platform-express": "^6.0.0",
@@ -23,7 +28,6 @@
       "module-alias": "^2.2.1",
       "mysql": "^2.17.1",
       "reflect-metadata": "^0.1.13",
-      "rimraf": "^2.6.2",
       "rxjs": "^6.3.3"
    },
    "devDependencies": {
@@ -47,6 +51,7 @@
       "mkdirp": "^0.5.1",
       "prettier": "1.17.0",
       "react-script": "^2.0.5",
+      "rimraf": "^2.7.1",
       "supertest": "4.0.2",
       "ts-jest": "24.0.2",
       "ts-morph": "^3.1.3",
@@ -56,7 +61,8 @@
       "tsconfig-paths": "3.8.0",
       "tslint": "5.16.0",
       "typescript": "^3.4.3",
-      "util": "^0.12.1"
+      "util": "^0.12.1",
+      "webpack": "^4.41.0"
    },
    "jest": {
       "moduleFileExtensions": [
