--- a/package.json
+++ b/package.json
@@ -31,10 +31,10 @@
     "bump-version": "lerna version",
     "publish:beta": "lerna exec -- npm publish",
     "routine": "npm run clean:all && npm run bootstrap && npm run check-packages && npm run zip",
-    "check-packages": "npm run clean && npm run lint && npm run build && npm run test",
+    "check-packages": "npm run clean  && npm run lint && npm run build && npm run test",
     "example": "npm run check-packages && cd example && npm run start",
     "deploy-old": "npm run check-packages && npm run publish",
-    "deploy": "npm run bootstrap | gnomon",
+    "deploy": "npm run bootstrap && npm run build | gnomon",
     "deploy:beta": "npm run bump-version && npm run routine && git commit -am 'package.lock' && npm run publish:beta"
   },
   "repository": {
