--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "check-packages": "npm run clean  && npm run lint && npm run build && npm run test",
     "example": "npm run check-packages && cd example && npm run start",
     "deploy-old": "npm run check-packages && npm run publish",
-    "deploy": "npm run bootstrap && npm run build | gnomon",
+    "deploy": "npm run bootstrap && npm run build",
     "deploy:beta": "npm run bump-version && npm run routine && git commit -am 'package.lock' && npm run publish:beta"
   },
   "repository": {
