--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "license": "LGPL-3.0",
   "scripts": {
     "ls": "lerna ls",
-    "bootstrap": "lerna bootstrap",
+    "bootstrap": "npm i && lerna bootstrap",
     "bootstrap:hoist": "lerna bootstrap --hoist",
     "bootstrap:example": "cd example && npm install",
     "build": "lerna run build",
@@ -59,10 +59,13 @@
     "lerna": "^3.13.0",
     "prettier": "^1.18.2",
     "rimraf": "^3.0.0",
-    "scub111-common": "^1.0.0",
+    "scub111-common": "^1.0.1",
     "tslib": "^1.10.0",
     "tslint": "^5.11.0",
     "tslint-config-standard": "^8.0.1",
     "typescript": "^3.4.3"
+  },
+  "dependencies": {
+    "@types/app-root-path": "^1.2.4"
   }
 }
