--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "scripts": {
     "ls": "lerna ls",
     "bootstrap": "npm i && lerna bootstrap",
+    "bootstrap:simple": "lerna bootstrap",
     "bootstrap:hoist": "lerna bootstrap --hoist",
     "bootstrap:example": "cd example && npm install",
     "build": "lerna run build",
@@ -33,8 +34,8 @@
     "check-packages": "npm run clean  && npm run lint && npm run build && npm run test",
     "example": "npm run check-packages && cd example && npm run start",
     "deploy-old": "npm run check-packages && npm run publish",
-    "deploy:init": "npm run bootstrap && npm run build",
-    "deploy": "node scripts/deployServer",
+    "deploy:init": "npm run bootstrap:simple && npm run build",
+    "deploy": "npm i && node scripts/deployServer",
     "deploy:beta": "npm run bump-version && npm run routine && git commit -am 'package.lock' && npm run publish:beta",
     "ncu": "ncu && lerna exec -- ncu",
     "ncu:u": "ncu -u && lerna exec -- ncu -u"
