--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "clean": "rimraf dist",
-    "build:init": "npm run clean && ncp tsconfig.build.json tsconfig.json && webpack",
+    "build:init": "ncp tsconfig.build.json tsconfig.json && webpack",
     "build": "node scripts/buildServer",
     "build:tsc": "rimraf dist && tsc -p tsconfig.build.json",
     "debug": "ncp tsconfig.debug.json tsconfig.json && cross-env NODE_ENV=development ts-node-dev --project tsconfig.debug.json -r tsconfig-paths/register  --inspect=6590 --respawn src/main.ts",
