--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ packages/*/dist
 packages/codegen/tsconfig.json
 packages/scripts/tsconfig.json
 packages/server/tsconfig.json
+packages/ssr/tsconfig.json
 
 /lib
 /dist
