--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@mapbul-pub/common": "^1.0.0",
     "@mapbul-pub/codegen": "^1.0.0",
+    "@mapbul-pub/types": "^1.0.0",
     "@nestjs/common": "^6.9.0",
     "@nestjs/core": "^6.9.0",
     "@nestjs/platform-express": "^6.9.0",
