--- a/packages/ssr/package.json
+++ b/packages/ssr/package.json
@@ -2,18 +2,19 @@
   "name": "nextjs-with-typescript",
   "version": "4.0.0",
   "private": true,
+  "scripts": {
+    "dev": "next",
+    "build": "next build",
+    "start": "next start"
+  },  
   "dependencies": {
+    "@mapbul-pub/types": "^1.0.0",
     "@material-ui/core": "latest",
     "clsx": "latest",
     "isomorphic-unfetch": "^3.0.0",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest"
-  },
-  "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start"
   },
   "devDependencies": {
     "@types/next": "latest",
