--- a/packages/server/tsconfig.build.json
+++ b/packages/server/tsconfig.build.json
@@ -7,6 +7,7 @@
     "paths": {
       // "server/*": ["./src/*"],
       "server/*": ["./packages/server/src/*"],
+      "codegen/*": ["./packages/codegen/src/*"],
     }
   },
   "include": [
