--- a/packages/ssr/package.json
+++ b/packages/ssr/package.json
@@ -1,25 +1,24 @@
 {
-  "name": "nextjs-with-typescript",
-  "version": "4.0.0",
-  "private": true,
+  "name": "@mapbul-pub/ssr2",
+  "version": "1.0.0",
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
-  },  
+    "start": "next start",
+    "type-check": "tsc"
+  },
   "dependencies": {
     "@mapbul-pub/types": "^1.0.0",
-    "@material-ui/core": "latest",
-    "clsx": "latest",
-    "isomorphic-unfetch": "^3.0.0",
+    "isomorphic-unfetch": "3.0.0",
     "next": "latest",
-    "react": "latest",
-    "react-dom": "latest"
+    "react": "^16.10.1",
+    "react-dom": "^16.10.1"
   },
   "devDependencies": {
-    "@types/next": "latest",
-    "@types/react": "latest",
-    "@types/react-dom": "latest",
-    "typescript": "latest"
-  }
+    "@types/node": "^12.7.8",
+    "@types/react": "^16.9.3",
+    "@types/react-dom": "^16.9.1",
+    "typescript": "3.6.3"
+  },
+  "license": "ISC"
 }
