--- a/packages/ssr/package.json
+++ b/packages/ssr/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@mapbul-pub/types": "^1.0.0",
+    "express": "^4.17.1",
     "isomorphic-unfetch": "3.0.0",
     "next": "latest",
     "react": "^16.10.1",
