--- a/packages/ssr/package.json
+++ b/packages/ssr/package.json
@@ -10,9 +10,10 @@
   },
   "dependencies": {
     "@mapbul-pub/types": "^1.0.0",
+    "@material-ui/core": "^4.5.2",
     "express": "^4.17.1",
     "isomorphic-unfetch": "3.0.0",
-    "next": "latest",
+    "next": "^9.1.3",
     "react": "^16.10.1",
     "react-dom": "^16.10.1"
   },
