--- a/packages/ssr/package.json
+++ b/packages/ssr/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@mapbul-pub/types": "^1.0.0",
     "@material-ui/core": "^4.5.2",
+    "@material-ui/icons": "^4.5.1",
+    "@types/markdown-to-jsx": "^6.9.0",
     "express": "^4.17.1",
     "isomorphic-unfetch": "3.0.0",
+    "markdown-to-jsx": "^6.10.3",
     "next": "^9.1.3",
     "react": "^16.10.1",
     "react-dom": "^16.10.1"
