--- a/packages/ssr/package.json
+++ b/packages/ssr/package.json
@@ -6,7 +6,9 @@
     "build": "next build",
     "start": "next start",
     "start:port": "next start -p",
-    "type-check": "tsc"
+    "type-check": "tsc",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@mapbul-pub/types": "^1.0.0",
@@ -21,10 +23,13 @@
     "react-dom": "^16.10.1"
   },
   "devDependencies": {
+    "@types/jest": "^24.0.23",
     "@types/node": "^12.7.8",
     "@types/react": "^16.9.3",
     "@types/react-dom": "^16.9.1",
+    "jest": "^24.9.0",
     "scub111-common": "^1.0.2",
+    "ts-jest": "^24.1.0",
     "typescript": "3.6.3"
   },
   "license": "ISC"
