--- a/packages/ssr/package.json
+++ b/packages/ssr/package.json
@@ -2,7 +2,7 @@
   "name": "@mapbul-pub/ssr2",
   "version": "1.0.0",
   "scripts": {
-    "dev": "next",
+    "dev": "next -p 3200",
     "build": "next build",
     "start": "next start",
     "start:port": "next start -p",
