--- a/packages/ssr/package.json
+++ b/packages/ssr/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "isomorphic-unfetch": "3.0.0",
     "markdown-to-jsx": "^6.10.3",
+    "material-ui-flat-pagination": "^4.0.0",
     "next": "^9.1.3",
     "react": "^16.10.1",
     "react-dom": "^16.10.1"
