--- a/packages/ssr/package.json
+++ b/packages/ssr/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@mapbul-pub/common": "^1.0.0",
+    "@mapbul-pub/utils": "^1.0.0",
     "@mapbul-pub/types": "^1.0.0",
     "@material-ui/core": "^4.5.2",
     "@material-ui/icons": "^4.5.1",
@@ -20,7 +21,6 @@
     "isomorphic-unfetch": "3.0.0",
     "markdown-to-jsx": "^6.10.3",
     "material-ui-flat-pagination": "^4.0.0",
-    "moment": "^2.24.0",
     "next": "^9.1.3",
     "react": "^16.10.1",
     "react-dom": "^16.10.1"
