--- a/packages/ssr/package.json
+++ b/packages/ssr/package.json
@@ -32,6 +32,7 @@
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
     "jest": "^24.9.0",
+    "next-compose-plugins": "^2.2.0",
     "scub111-common": "^1.0.2",
     "ts-jest": "^24.2.0",
     "typescript": "3.7.3"
