--- a/packages/ssr/tsconfig.json
+++ b/packages/ssr/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
     "allowJs": true,
     "alwaysStrict": true,
@@ -8,16 +9,15 @@
     "jsx": "preserve",
     "lib": ["dom", "es2017"],
     "module": "esnext",
-    "moduleResolution": "node",
     "noEmit": true,
     "noFallthroughCasesInSwitch": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "strict": true,
     "target": "esnext",
+    "paths": {
+      "ssr/*": ["./packages/ssr/*"],
+    }  
   },
-  "exclude": ["node_modules"],
   "include": ["**/*.ts", "**/*.tsx"]
 }
