--- a/packages/ssr/package.json
+++ b/packages/ssr/package.json
@@ -17,6 +17,7 @@
     "@material-ui/core": "^4.8.0",
     "@material-ui/icons": "^4.5.1",
     "@types/markdown-to-jsx": "^6.9.1",
+    "@types/react-redux": "^7.1.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "isomorphic-unfetch": "3.0.0",
@@ -24,7 +25,10 @@
     "material-ui-flat-pagination": "^4.0.0",
     "next": "^9.1.5",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8"
   },
   "devDependencies": {
     "@types/jest": "^24.0.23",
