--- a/packages/ssr/package.json
+++ b/packages/ssr/package.json
@@ -26,6 +26,7 @@
     "next": "^9.1.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-infinite-scroller": "^1.2.4",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
@@ -36,6 +37,7 @@
     "@types/node": "^12.12.17",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
+    "@types/react-infinite-scroller": "^1.2.1",
     "@types/redux-actions": "^2.6.1",
     "jest": "^24.9.0",
     "next-compose-plugins": "^2.2.0",
