--- a/packages/ssr/package.json
+++ b/packages/ssr/package.json
@@ -30,7 +30,8 @@
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
-    "redux-devtools-extension": "^2.13.8"
+    "redux-devtools-extension": "^2.13.8",
+    "styled-components": "^5.1.0"
   },
   "devDependencies": {
     "@types/jest": "^24.9.0",
@@ -39,6 +40,7 @@
     "@types/react-dom": "^16.9.4",
     "@types/react-infinite-scroller": "^1.2.1",
     "@types/redux-actions": "^2.6.1",
+    "@types/styled-components": "^5.1.0",
     "jest": "^24.9.0",
     "next-compose-plugins": "^2.2.0",
     "scub111-common": "^1.0.3",
