--- a/packages/ssr/.env.dev
+++ b/packages/ssr/.env.dev
@@ -1,3 +1,4 @@
-BASE_URL=http://localhost:3100/api
+// BASE_URL=http://localhost:3100/api
+BASE_URL=https://x-island.com/api
 IMAGE_URL=https://x-island.com
  
