--- a/packages/ssr/package.json
+++ b/packages/ssr/package.json
@@ -20,6 +20,7 @@
     "@types/react-redux": "^7.1.6",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "google-map-react": "^1.1.7",
     "isomorphic-unfetch": "3.0.0",
     "markdown-to-jsx": "^6.10.3",
     "material-ui-flat-pagination": "^4.1.0",
@@ -34,6 +35,7 @@
     "styled-components": "^5.1.0"
   },
   "devDependencies": {
+    "@types/google-map-react": "^1.1.7",
     "@types/jest": "^24.9.0",
     "@types/node": "^13.1.8",
     "@types/react": "^16.9.17",
