--- a/packages/admin/nginx.conf
+++ b/packages/admin/nginx.conf
@@ -25,6 +25,10 @@ http {
             try_files $uri /index.html =404;
         }
 
+        location /admin {
+            try_files $uri /admin/index.html =404;
+        }
+
         #error_page  404              /404.html;
 
         # redirect server error pages to the static page /50x.html
