--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -7,7 +7,7 @@
     "start": "cross-env NODE_ENV=development webpack-dev-server --config config/webpack.config.standalone.js",
     "dev": "npm run start --progress --colors --open",
     "build:lib": "NODE_ENV=production node scripts/build.js --stats",
-    "build": "NODE_ENV=production webpack --config config/webpack.config.standalone.js",
+    "build": "cross-env NODE_ENV=production webpack --config config/webpack.config.standalone.js",
     "nginx": "rm -rf /users/shared/www/9090 && cp -rf build /users/shared/www/9090",
     "test": "jest --verbose",
     "test:watch": "jest --watch",
