--- a/packages/ssr/.env.dev
+++ b/packages/ssr/.env.dev
@@ -1,4 +1,5 @@
-BASE_URL=http://localhost:3100/api
-// BASE_URL=https://x-island.com/api
+// BASE_URL=http://localhost:3100/api
+BASE_URL_FRONT=https://x-island.com/api
+BASE_URL_SERVER=https://x-island.com/api
 IMAGE_URL=https://x-island.com
  
