--- a/packages/ssr/.env.prod
+++ b/packages/ssr/.env.prod
@@ -1,3 +1,4 @@
-BASE_URL=https://x-island.com/api
+BASE_URL_FRONT=https://x-island.com/api
+BASE_URL_SERVER=https://192.168.0.22/api
 IMAGE_URL=https://x-island.com
  
