--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -1,87 +1,92 @@
 {
-   "name": "webpack-typescript-react",
-   "version": "1.0.1",
-   "description": "",
-   "main": "index.js",
-   "scripts": {
-      "build": "webpack --mode production",
-      "start": "webpack-dev-server --mode development --content-base src",
-      "analyze": "webpack --mode none --content-base src",
-      "test": "jest",
-      "test-coverage": "jest --coverage",
-      "prettier": "prettier --write \"src/**/*.{ts,tsx,css}\"",
-      "tslint-check": "tslint-config-prettier-check ./tslint.json"
-   },
-   "keywords": [],
-   "author": "",
-   "license": "ISC",
-   "devDependencies": {
-      "@types/app-root-path": "^1.2.4",
-      "@types/enzyme": "^3.9.1",
-      "@types/enzyme-adapter-react-16": "^1.0.5",
-      "@types/isomorphic-fetch": "0.0.35",
-      "@types/jest": "^24.0.11",
-      "@types/nock": "^9.3.1",
-      "@types/react": "^16.8.10",
-      "@types/react-dom": "^16.8.3",
-      "@types/react-redux": "^7.0.6",
-      "@types/redux-action": "^1.2.5",
-      "@types/redux-actions": "^2.6.0",
-      "@types/redux-saga": "^0.10.5",
-      "@types/selenium-webdriver": "^3.0.15",
-      "app-root-path": "^2.2.1",
-      "async-wait-until": "^1.2.4",
-      "awesome-typescript-loader": "^5.2.1",
-      "chromedriver": "^2.46.0",
-      "clean-webpack-plugin": "^3.0.0",
-      "css-loader": "^2.1.1",
-      "enzyme": "^3.9.0",
-      "enzyme-adapter-react-16": "^1.11.2",
-      "geckodriver": "^1.16.2",
-      "html-webpack-plugin": "^3.2.0",
-      "identity-obj-proxy": "^3.0.0",
-      "import": "0.0.6",
-      "jest": "^24.5.0",
-      "less": "^3.9.0",
-      "less-loader": "^4.1.0",
-      "mini-css-extract-plugin": "^0.5.0",
-      "nock": "^10.0.6",
-      "node-sass": "^4.12.0",
-      "optimize-css-assets-webpack-plugin": "^5.0.1",
-      "path": "^0.12.7",
-      "postcss-browser-reporter": "^0.5.0",
-      "postcss-import": "^12.0.1",
-      "postcss-loader": "^3.0.0",
-      "postcss-preset-env": "^6.6.0",
-      "postcss-reporter": "^6.0.1",
-      "postcss-url": "^8.0.0",
-      "prettier": "^1.16.4",
-      "react-dev-utils": "^9.0.1",
-      "redux-devtools-extension": "^2.13.8",
-      "sass-loader": "^7.1.0",
-      "scub111-fileio": "^1.0.7",
-      "selenium-webdriver": "^3.6.0",
-      "style-loader": "^0.23.1",
-      "ts-jest": "^24.0.1",
-      "ts-loader": "^5.3.3",
-      "tslint": "^5.14.0",
-      "tslint-config-airbnb": "^5.11.1",
-      "tslint-config-prettier": "^1.18.0",
-      "typescript": "^3.4.1",
-      "webpack": "^4.29.6",
-      "webpack-bundle-analyzer": "^3.8.0",
-      "webpack-cleanup-plugin": "^0.5.1",
-      "webpack-cli": "^3.3.0",
-      "webpack-dev-server": "^3.2.1"
-   },
-   "dependencies": {
-      "axios": "^0.19.0",
-      "react": "^16.8.6",
-      "react-dom": "^16.8.6",
-      "react-redux": "^6.0.1",
-      "redux": "^4.0.1",
-      "redux-actions": "^2.6.5",
-      "redux-saga": "^1.0.2",
-      "redux-thunk": "^2.3.0"
-   }
+  "name": "webpack-typescript-react",
+  "version": "1.0.1",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "build": "webpack --mode production",
+    "start": "webpack-dev-server --mode development --content-base src",
+    "analyze": "webpack --mode none --content-base src",
+    "test": "jest",
+    "test-coverage": "jest --coverage",
+    "prettier": "prettier --write \"src/**/*.{ts,tsx,css}\"",
+    "tslint-check": "tslint-config-prettier-check ./tslint.json"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@types/app-root-path": "^1.2.4",
+    "@types/enzyme": "^3.9.1",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
+    "@types/isomorphic-fetch": "0.0.35",
+    "@types/jest": "^24.0.11",
+    "@types/nock": "^9.3.1",
+    "@types/react": "^16.8.10",
+    "@types/react-dom": "^16.8.3",
+    "@types/react-redux": "^7.1.9",
+    "@types/redux-action": "^1.2.5",
+    "@types/redux-actions": "^2.6.0",
+    "@types/redux-saga": "^0.10.5",
+    "@types/selenium-webdriver": "^3.0.15",
+    "app-root-path": "^2.2.1",
+    "async-wait-until": "^1.2.4",
+    "awesome-typescript-loader": "^5.2.1",
+    "chromedriver": "^2.46.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^2.1.1",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.11.2",
+    "geckodriver": "^1.16.2",
+    "html-webpack-plugin": "^3.2.0",
+    "identity-obj-proxy": "^3.0.0",
+    "import": "0.0.6",
+    "jest": "^24.5.0",
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0",
+    "mini-css-extract-plugin": "^0.5.0",
+    "nock": "^10.0.6",
+    "node-sass": "^4.12.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "path": "^0.12.7",
+    "postcss-browser-reporter": "^0.5.0",
+    "postcss-import": "^12.0.1",
+    "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.6.0",
+    "postcss-reporter": "^6.0.1",
+    "postcss-url": "^8.0.0",
+    "prettier": "^1.16.4",
+    "react-dev-utils": "^9.0.1",
+    "redux-devtools-extension": "^2.13.8",
+    "sass-loader": "^7.1.0",
+    "scub111-fileio": "^1.0.7",
+    "selenium-webdriver": "^3.6.0",
+    "style-loader": "^0.23.1",
+    "ts-jest": "^24.0.1",
+    "ts-loader": "^5.3.3",
+    "tslint": "^5.14.0",
+    "tslint-config-airbnb": "^5.11.1",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^3.7.2",
+    "webpack": "^4.29.6",
+    "webpack-bundle-analyzer": "^3.8.0",
+    "webpack-cleanup-plugin": "^0.5.1",
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.2.1"
+  },
+  "dependencies": {
+    "@material-ui/core": "^4.10.0",
+    "@material-ui/icons": "^4.9.1",
+    "axios": "^0.19.0",
+    "query-string": "^6.13.1",
+    "ra-core": "^3.7.1",
+    "react": "^16.8.6",
+    "react-admin": "^3.7.1",
+    "react-dom": "^16.8.6",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.1",
+    "redux-actions": "^2.6.5",
+    "redux-saga": "^1.0.2",
+    "redux-thunk": "^2.3.0"
+  }
 }
